a lot of updates after a full weel of work thanks to the global pandemic

--- a/first_author_papers.bib
+++ b/first_author_papers.bib
@@ -6,7 +6,7 @@
   url = {http://thesesups.ups-tlse.fr/111/},
   copyright = {All rights reserved},
   file = {C\:\\Users\\JH218595\\Zotero\\storage\\G8576QHI\\Hillairet - 2007 - Applications du formalisme des faisceaux gaussiens.pdf},
-  school = {Universit{\'e} de Toulouse III - Paul Sabatier - U.F.R. P.C.A.}
+  school = {Universit{\'e} de Toulouse III - Paul Sabatier}
 }
 
 @article{hillairet2008,
@@ -156,7 +156,7 @@
 @inproceedings{hillairet2015-2,
   ids = {hillairet2015-1},
   title = {Ion Cyclotron Resonance Heating Systems Upgrade toward High Power and {{CW}} Operations in {{WEST}}},
-  booktitle = {{{RADIO FREQUENCY POWER IN PLASMAS}}: {{Proceedings}} of the 21st {{Topical Conference}}},
+  booktitle = {Radio {{Frequency Power In Plasma}}: {{Proceedings}} of the 21st {{Topical Conference}}},
   author = {Hillairet, Julien and Mollard, Patrick and Zhao, Yanping and Bernard, Jean-Michel and Song, Yuntao and Argouarch, Arnaud and {Berger-By}, Gilles and Charabot, Nicolas and Chen, Gen and Chen, Zhaoxi and Colas, Laurent and Delaplanche, Jean-Marc and Dumortier, Pierre and Durodi{\'e}, Fr{\'e}d{\'e}ric and Ekedahl, Annika and Fedorczak, Nicolas and Ferlay, Fabien and Goniche, Marc and Hatchressian, Jean-Claude and Helou, Walid and Jacquot, Jonathan and Joffrin, Emmanuel and Litaudon, Xavier and Lombard, Gilles and Maggiora, Riccardo and Magne, Roland and Milanesio, Daniele and Patterlini, Jean-Claude and Prou, Marc and Verger, Jean-Marc and Volpe, Robert and Vulliez, Karl and Wang, Yongsheng and Winkler, Konstantin and Yang, Qingxi and Yuan, Shuai},
   year = {2015},
   pages = {070005},
