--- a/tex/intro.tex
+++ b/tex/intro.tex
@@ -4,3 +4,11 @@
 \labch{intro}
 
 Magnetic confinement fusion researches is the most advanced technique to master nuclear fusion for energy production. One of the main requirements for achieving fusion is to heat the plasma particles to temperatures exceeding 100-200 million of degrees (10-20 keV). Electromagnetic waves in mega-watt range of power, from tens of MHz to hundreds of GHz, are launched by antennas located near the plasma periphery in order to increase the plasma temperature and extend its duration \sidecite{Cairns1991}. 
+
+
+
+
+Part of my work is not described in thus manuscript, like some analysis concerning RF plasma cleaning in the frame of the ITER Wide-Angle Visible (WAVS) diagnostic, my work as WEST Engineer-in-Charge (\href{https://github.com/IRFM/PPPAT/}{https://github.com/IRFM/PPPAT/}) and a rapid excursion in the Electron Cyclotron world (\cite{farthouat2010}). 
+
+
+Some figures in this manuscript, like Figure~\ref{fig:chap1:reactivity} and Figure~\ref{fig:chap1:nTtau_machines} have been made in the frame on an \href{https://github.com/alfkoehn/fusion_plots/}{open-source project} created in collaboration with Alf Koehn from University of Stuttgart, which purpose is to reproduce classic figures used in Fusion Textbooks using open-source codes and data.
