a lot of improvements

--- a/master.tex
+++ b/master.tex
@@ -50,6 +50,7 @@ numbers=noenddot, % Comment to output dots after chapter numbers; the most commo
 \newcommand{\abf}{{\mathbf a}}
 \newcommand{\bbf}{{\mathbf b}}
 \newcommand{\ebf}{{\mathbf e}}
+\newcommand{\hbf}{{\mathbf h}}
 \newcommand{\jbf}{{\mathbf j}}
 \newcommand{\kbf}{{\mathbf k}}
 \newcommand{\rbf}{{\mathbf r}}
