--- a/references.bib
+++ b/references.bib
@@ -417,6 +417,19 @@
   school = {Universitat Polit{\`e}cnica de Val{\`e}ncia}
 }
 
+@article{ao2014,
+  title = {Impedance Matching of Pillbox-Type {{RF}} Windows and Direct Measurement of the Ceramic Relative Dielectric Constant},
+  author = {Ao, Hiroyuki and Asano, Hiroyuki and Naito, Fujio and Ouchi, Nobuo and Tamura, Jun and Takata, Koji},
+  year = {2014},
+  month = feb,
+  volume = {737},
+  pages = {65--70},
+  issn = {01689002},
+  doi = {10/f5n4g5},
+  journal = {Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment},
+  language = {en}
+}
+
 @article{arai1986,
   ids = {Arai1986,araiAnalysisVacuumWindow1986},
   title = {An {{Analysis}} of a {{Vacuum Window}} for {{Lower Hybrid Heating}}},
@@ -1908,6 +1921,14 @@
   keywords = {\#nosource}
 }
 
+@techreport{bibet2001-1,
+  title = {Detailed {{Design Description Lower Hybrid Heating}} and {{Current Drive System}}},
+  author = {Bibet, Philippe and Bosia, G. F.},
+  year = {2001},
+  institution = {{CEA/IRFM}},
+  number = {CH/NTT-2001.010}
+}
+
 @article{bibet2003,
   title = {Overview of the {{ITER}}-{{FEAT LH}} System},
   author = {Bibet, Ph. and Mirizzi, F. and Bosia, P. and Doceul, L. and Kuzikov, S. and Rantam{\"a}ki, K. and Tuccillo, A.A. and Wasasterjna, F.},
@@ -2703,6 +2724,21 @@
   journal = {Fusion Engineering and Design},
   language = {en},
   number = {9-11}
+}
+
+@article{brady1965,
+  title = {Rectangular {{Waveguide Flange Nomenclature}} ({{Correspondence}})},
+  author = {Brady, M.M.},
+  year = {1965},
+  month = jul,
+  volume = {13},
+  pages = {469--471},
+  issn = {1557-9670},
+  doi = {10/dzvz49},
+  file = {C\:\\Users\\JH218595\\Zotero\\storage\\5GN7XDM2\\Brady_1965_Rectangular Waveguide Flange Nomenclature (Correspondence).pdf;C\:\\Users\\JH218595\\Zotero\\storage\\NP2MQ7UI\\1126031.html},
+  journal = {IEEE Transactions on Microwave Theory and Techniques},
+  keywords = {Ceramics,Dielectric constant,Dielectric measurements,Dispersion,Fabrication,Flanges,Iris,Optical coupling,Rectangular waveguides,Tellurium},
+  number = {4}
 }
 
 @article{brambilla1976,
@@ -6063,7 +6099,7 @@
   author = {Ekedahl, A and Goniche, M and Achard, J and Armitano, A and Bourdelle, C and Bucalossi, J and Delpech, L and Desgranges, C and Devynck, P and Fedorczak, N and Garcia, J and Gil, C and Gunn, J P and Mazon, D and Meyer, O and Morales, J and Moreau, Ph and Nardon, E and Nouailletas, R and Peysson, Y and Prou, M and {Regal-Mezin}, X and Reux, C and Vezinet, D},
   pages = {4},
   abstract = {The last experimental campaign in WEST has allowed obtaining the first results of LHCD in a full tungsten (W) environment. 2.4 MW LHCD power has been coupled in X-point plasmas at low density. Once the magnetic equilibrium had been optimised, the coupled LHCD power could rapidly be increased (in four sessions only). The current drive efficiency is found to be lower than in Tore Supra, which could probably be due to high Zeff and non-optimised coupling conditions, the latter of which could be improved by operating at higher plasma density, using local gas injection and new improved plasma outer gap control.},
-  file = {C\:\\Users\\JH218595\\Documents\\Bibliography\\Papers\\Fusion\\RF\\LHCD\\Ekedahl et al._2018_First LHCD experiments in WEST.pdf;C\:\\Users\\JH218595\\Zotero\\storage\\2G4P9IBE\\Ekedahl et al. - First LHCD experiments in WEST.pdf},
+  file = {C\:\\Users\\JH218595\\Documents\\Bibliography\\Papers\\Fusion\\RF\\LHCD\\Ekedahl et al._2018_First LHCD experiments in WEST.pdf},
   keywords = {⛔ No DOI found},
   language = {en}
 }
@@ -6121,6 +6157,23 @@
   doi = {10/bqsdtk},
   abstract = {A new ITER-relevant lower hybrid current drive (LHCD) launcher, based on the passive-active-multijunction (PAM) concept, was brought into operation on the Tore Supra tokamak in autumn 2009. The PAM launcher concept was designed in view of ITER to allow efficient cooling of the waveguides, as required for long pulse operation. In addition, it offers low power reflection close to the cut-off density, which is very attractive for ITER, where the large distance between the plasma and the wall may bring the density in front of the launcher to low values. The first experimental campaign on Tore Supra has shown extremely encouraging results in terms of reflected power level and power handling. Power reflection coefficient {$<$}2\% is obtained at low density in front of the launcher, i.e. close to the cut-off density, and very good agreement between the experimental results and the coupling code predictions is obtained. Long pulse operation at ITER-relevant power density has been demonstrated. The maximum power and energy reached so far is 2.7 MW during 78 s, corresponding to a power density of 25 MW m-2, i.e. its design value at f = 3.7 GHz. In addition, 2.7 MW has been coupled at a plasma\textendash{}launcher distance of 10 cm, with a power reflection coefficient {$<$}2\%. Finally, full non-inductive discharges have been sustained for 50 s with the PAM.},
   file = {C\:\\Users\\JH218595\\Documents\\Bibliography\\Papers\\Fusion\\RF\\LHCD\\Ekedahl et al._2010_Validation of the ITER-relevant passive-active-multijunction LHCD launcher on long pulses in Tore Supra.pdf;C\:\\Users\\JH218595\\Zotero\\storage\\HD2DPZA7\\Ekedahl et al. - 2010 - Validation of the ITER-relevant passive-active-mul.pdf},
+  journal = {Nuclear Fusion},
+  language = {en},
+  number = {11}
+}
+
+@article{ekedahl2010-1,
+  title = {Validation of the {{ITER}}-Relevant Passive-Active-Multijunction {{LHCD}} Launcher on Long Pulses in {{Tore Supra}}},
+  author = {Ekedahl, A. and Delpech, L. and Goniche, M. and Guilhem, D. and Hillairet, J. and Preynas, M. and Sharma, P. K. and Achard, J. and Bae, Y. S. and Bai, X. and Balorin, C. and Baranov, Y. and Basiuk, V. and B{\'e}coulet, A. and Belo, J. and {Berger-By}, G. and Br{\'e}mond, S. and Castaldo, C. and Ceccuzzi, S. and Cesario, R. and Corbel, E. and Courtois, X. and Decker, J. and Delmas, E. and Ding, X. and Douai, D. and Goletto, C. and Gunn, J. P. and Hertout, P. and Hoang, G. T. and Imbeaux, F. and Kirov, K. K. and Litaudon, X. and Magne, R. and Mailloux, J. and Mazon, D. and Mirizzi, F. and Mollard, P. and Moreau, P. and Oosako, T. and Petrzilka, V. and Peysson, Y. and Poli, S. and Prou, M. and {Saint-Laurent}, F. and Samaille, F. and Saoutic, B.},
+  year = {2010},
+  month = sep,
+  volume = {50},
+  pages = {112002},
+  publisher = {{IOP Publishing}},
+  issn = {0029-5515},
+  doi = {10/bqsdtk},
+  abstract = {A new ITER-relevant lower hybrid current drive (LHCD) launcher, based on the passive-active-multijunction (PAM) concept, was brought into operation on the Tore Supra tokamak in autumn 2009. The PAM launcher concept was designed in view of ITER to allow efficient cooling of the waveguides, as required for long pulse operation. In addition, it offers low power reflection close to the cut-off density, which is very attractive for ITER, where the large distance between the plasma and the wall may bring the density in front of the launcher to low values. The first experimental campaign on Tore Supra has shown extremely encouraging results in terms of reflected power level and power handling. Power reflection coefficient {$<$}2\% is obtained at low density in front of the launcher, i.e. close to the cut-off density, and very good agreement between the experimental results and the coupling code predictions is obtained. Long pulse operation at ITER-relevant power density has been demonstrated. The maximum power and energy reached so far is 2.7 MW during 78 s, corresponding to a power density of 25 MW m-2, i.e. its design value at f = 3.7 GHz. In addition, 2.7 MW has been coupled at a plasma\textendash{}launcher distance of 10 cm, with a power reflection coefficient {$<$}2\%. Finally, full non-inductive discharges have been sustained for 50 s with the PAM.},
+  file = {C\:\\Users\\JH218595\\Zotero\\storage\\SAQ6G7GF\\Ekedahl et al_2010_Validation of the ITER-relevant passive-active-multijunction LHCD launcher on.pdf},
   journal = {Nuclear Fusion},
   language = {en},
   number = {11}
@@ -6740,6 +6793,16 @@
   keywords = {Maxwell equations},
   lccn = {QC670 .F56 2008},
   note = {OCLC: ocn173182616}
+}
+
+@article{floch2011,
+  title = {Low-Loss Dielectric Material Characterization and High-{{Q}} Resonator Design from Microwave to Millimetre Waves Frequencies},
+  author = {Floch, Jean-Michel Le and Tobar, Michael E. and Humbert, Georges and Mouneyrac, David and F{\'e}rachou, Denis and Bara, Romain and Aubourg, Michel and Hartnett, John G. and Cros, Dominique and Blondy, Jean-Marc and Krupka, Jerzy},
+  year = {2011},
+  pages = {15},
+  file = {C\:\\Users\\JH218595\\Zotero\\storage\\ZPDU7FNN\\hal-00925156.html},
+  journal = {Journal of Physical Science and Application},
+  language = {en}
 }
 
 @article{flugel1988,
@@ -8369,6 +8432,21 @@
   keywords = {\#nosource}
 }
 
+@article{harvey1955,
+  title = {Standard Waveguides and Couplings for Microwave Equipment},
+  author = {Harvey, A.F.},
+  year = {1955},
+  month = jul,
+  volume = {102},
+  pages = {493--499},
+  doi = {10/ggsmkh},
+  abstract = {An account is given of the development and standardization of waveguides, couplings and adaptors for microwave equipment. Whilst these items were primarily intended for use in Service electronic equipment, they have proved to be of considerable use in commercial applications. The appropriate sizes of waveguide to cover the whole microwave spectrum are discussed, and reasons are given for the standards chosen. The final specifications are the result of much interchange of information amongst users of equipment in this field, not only in this country but in others. A Section on the finishing and packaging of waveguide parts is included.},
+  file = {C\:\\Users\\JH218595\\Zotero\\storage\\M3UWB972\\Harvey_1955_Standard waveguides and couplings for microwave equipment.pdf;C\:\\Users\\JH218595\\Zotero\\storage\\BT6DGJK7\\5242976.html},
+  journal = {Proceedings of the IEE - Part B: Radio and Electronic Engineering},
+  keywords = {waveguides},
+  number = {4}
+}
+
 @article{hassanein2006,
   title = {Effects of Surface Damage on Rf Cavity Operation},
   author = {Hassanein, A. and Insepov, Z. and Norem, J. and Moretti, A. and Qian, Z. and Bross, A. and Torun, Y. and Rimmer, R. and Li, D. and Zisman, M. and Seidman, D. N. and Yoon, K. E.},
@@ -9010,6 +9088,16 @@
   keywords = {\#nosource}
 }
 
+@inproceedings{hillairet2014,
+  title = {Design and {{RF}} Measurements of a 5 {{GHz}} 500 {{kW}} Window for the {{ITER LHCD}} System},
+  booktitle = {{{RADIOFREQUENCY POWER IN PLASMAS}}: {{Proceedings}} of the 20th {{Topical Conference}}},
+  author = {Hillairet, J. and Achard, J. and Bae, Y. S. and Bernard, J. M. and Dechambre, N. and Delpech, L. and Ekedahl, A. and Faure, N. and Goniche, M. and Kim, J. and Larroque, S. and Magne, R. and Marfisi, L. and Namkung, W. and Park, H. and Park, S. and Poli, S. and Vulliez, K.},
+  year = {2014},
+  pages = {474--477},
+  address = {{Sorrento, Italy}},
+  doi = {10/ggc23d}
+}
+
 @article{hillairet2015,
   title = {Design and Tests of 500 {{kW RF}} Windows for the {{ITER LHCD}} System},
   author = {Hillairet, J. and Kim, J. and Faure, N. and Achard, J. and Bae, Y.S. and Bernard, J.M. and Delpech, L. and Goniche, M. and Larroque, S. and Magne, R. and Marfisi, L. and Park, S. and Poli, S. and Dechambre, N. and Vulliez, K.},
@@ -9631,6 +9719,21 @@
   number = {8}
 }
 
+@article{hwang2017,
+  title = {Development and Performance Test of a New High Power {{RF}} Window in {{S}}-Band {{PLS}}-{{II LINAC}}},
+  author = {Hwang, Woon-Ha and Joo, Young-Do and Kim, Seung-Hwan and Choi, Jae-Young and Noh, Sung-Ju and Ryu, Ji-Wan and Cho, Young-Ki},
+  year = {2017},
+  month = dec,
+  volume = {71},
+  pages = {802--806},
+  issn = {1976-8524},
+  doi = {10/gcnqxw},
+  abstract = {A prototype of RF window was developed in collaboration with the Pohang Accelerator Laboratory (PAL) and domestic companies. High power performance tests of the single RF window were conducted at PAL to verify the operational characteristics for its application in the Pohang Light Source-II (PLS-II) linear accelerator (Linac). The tests were performed in the in-situ facility consisting of a modulator, klystron, waveguide network, vacuum system, cooling system, and RF analyzing equipment. The test results with Stanford linear accelerator energy doubler (SLED) have shown no breakdown up to 75 MW peak power with 4.5 {$\mu$}s RF pulse width at a repetition rate of 10 Hz. The test results with the current operation level of PLS-II Linac confirm that the RF window well satisfies the criteria for PLS-II Linac operation.},
+  journal = {Journal of the Korean Physical Society},
+  language = {en},
+  number = {11}
+}
+
 @article{iatrou1997,
   title = {Field Analysis of Rectangular Waveguide Open Junction},
   author = {Iatrou, C.T. and Cavenago, M.},
@@ -9891,6 +9994,18 @@
   file = {C\:\\Users\\JH218595\\Documents\\Bibliography\\Papers\\RF - Electromagnetism\\Ives, Neilson_2007_Tabel T b l.pdf},
   keywords = {⛔ No DOI found},
   language = {en}
+}
+
+@inproceedings{ives1993,
+  title = {{{TE}}/Sub 01/ Windows for High Power Klystron Applications},
+  booktitle = {Proceedings of {{IEEE International Electron Devices Meeting}}},
+  author = {Ives, R.L. and Neilson, J.},
+  year = {1993},
+  pages = {161--164},
+  publisher = {{IEEE}},
+  address = {{Washington, DC, USA}},
+  doi = {10/ck7gn5},
+  isbn = {978-0-7803-1450-4}
 }
 
 @book{Jackson1998,
@@ -10892,13 +11007,29 @@
   school = {?cole Polytechnique F?d?rale de Lausanne}
 }
 
-@article{kerr,
+@inproceedings{kenichihayashi2007,
+  title = {Klystron Development by {{TETD}}},
+  booktitle = {2007 {{IEEE Particle Accelerator Conference}} ({{PAC}})},
+  author = {{Kenichi Hayashi} and {Masao Irikura} and {Yoshika Mitsunaka} and {Setsuo Miyake} and {Yoshihisa Ookubo} and {Mitsunori Sakamoto} and {Hiroyuki Taoka} and {Katsuhiko Tetsuka} and {Hiroto Urakata} and {Atsunori Yano}},
+  year = {2007},
+  pages = {2688--2690},
+  publisher = {{IEEE}},
+  address = {{Albuquerque, NM}},
+  doi = {10/dwg66s},
+  isbn = {978-1-4244-0916-7}
+}
+
+@techreport{kerr2010,
   title = {Mismatch {{Caused}} by {{Waveguide Tolerances}}, {{Corner Radii}}, and {{Flange Misalignment}}},
   author = {Kerr, A R},
+  year = {2010},
+  month = jan,
   pages = {6},
-  file = {C\:\\Users\\JH218595\\Documents\\Bibliography\\Papers\\RF - Electromagnetism\\Kerr_2010_ELECTRONICS DIVISION TECHNICAL NOTE NO . 215 Mismatch Caused by Waveguide Tolerances , Corner Radii , and Flange Misalignment.pdf},
+  institution = {{National Radio Astronomy Observatory}},
+  file = {C\:\\Users\\JH218595\\Documents\\Bibliography\\Papers\\RF - Electromagnetism\\Kerr - 2010 - Mismatch Caused by Waveguide Tolerances, Corner Ra.pdf},
   keywords = {⛔ No DOI found},
-  language = {en}
+  language = {en},
+  number = {EDTN 215}
 }
 
 @article{kesternich1993,
@@ -12276,6 +12407,22 @@
   number = {3}
 }
 
+@article{lefloch2014,
+  title = {Dielectric Material Characterization Techniques and Designs of High-{{Q}} Resonators for Applications from Micro to Millimeter-Waves Frequencies Applicable at Room and Cryogenic Temperatures},
+  shorttitle = {Invited {{Article}}},
+  author = {Le Floch, Jean-Michel and Fan, Y. and Humbert, Georges and Shan, Qingxiao and F{\'e}rachou, Denis and {Bara-Maillet}, Romain and Aubourg, Michel and Hartnett, John G. and Madrangeas, Valerie and Cros, Dominique and Blondy, Jean-Marc and Krupka, Jerzy and Tobar, Michael E.},
+  year = {2014},
+  month = mar,
+  volume = {85},
+  pages = {031301},
+  issn = {0034-6748, 1089-7623},
+  doi = {10/f53bjj},
+  file = {C\:\\Users\\JH218595\\Zotero\\storage\\F284DZXS\\Le Floch et al. - 2014 - Dielectric material characterization techniques an.pdf},
+  journal = {Review of Scientific Instruments},
+  language = {en},
+  number = {3}
+}
+
 @article{leipold2016,
   title = {Cleaning of First Mirrors in {{ITER}} by Means of Radio Frequency Discharges},
   author = {Leipold, F. and Reichle, R. and Vorpahl, C. and Mukhin, E. E. and Dmitriev, A. M. and Razdobarin, A. G. and Samsonov, D. S. and Marot, L. and Moser, L. and Steiner, R. and Meyer, E.},
@@ -13291,6 +13438,19 @@
   journal = {Nuclear Fusion},
   language = {en},
   number = {8}
+}
+
+@inproceedings{magne2011,
+  title = {Development of High Power {{CW}} 3.7 {{GHz}} Klystrons for Fusion Experiments on {{Tore Supra}}},
+  booktitle = {2011 {{IEEE International Vacuum Electronics Conference}} ({{IVEC}})},
+  author = {Magne, R. and Armitano, A. and Beunas, A. and {Berger-By}, G. and Bouquey, F. and Corbel, E. and Delpech, L. and Kazarian, F. and Mollard, P. and Prou, M. and Samaille, F. and Volpe, D.},
+  year = {2011},
+  month = feb,
+  pages = {27--28},
+  publisher = {{IEEE}},
+  address = {{Bangalore, Karnataka, India}},
+  doi = {10/d89mxj},
+  isbn = {978-1-4244-8662-5}
 }
 
 @article{malcolm-neale2019,
@@ -21558,6 +21718,14 @@ Multipactor analysis for different structures were performed, and the breakdown 
   language = {en}
 }
 
+@techreport{waldon2008,
+  title = {Engineering {{Justification Document For ITER Practice}} for {{Non}}-{{Metallic Replaceable Window Assemblies}}, {{ITER}}},
+  author = {Waldon, Chris},
+  year = {2008},
+  institution = {{ITER Organisation}},
+  number = {IDM 2YHVGT}
+}
+
 @article{walker2010,
   title = {Impact of {\emph{in Situ}} Oxygen Plasma Cleaning on the Resistance of {{Ru}} and {{Au}}-{{Ru}} Based Rf Microelectromechanical System Contacts in Vacuum},
   author = {Walker, M. and Nordquist, C. and Czaplewski, D. and Patrizi, G. and McGruer, N. and Krim, J.},
@@ -22987,6 +23155,12 @@ Multipactor analysis for different structures were performed, and the breakdown 
   title = {An Analysis of Lower Hybrid Grill Coupling Using an Efficient Full Wave Code - {{IOPscience}}},
   file = {C\:\\Users\\JH218595\\Zotero\\storage\\PCT5X39N\\083005.html},
   howpublished = {https://iopscience.iop.org/article/10.1088/0029-5515/52/8/083005}
+}
+
+@misc{zotero-8851,
+  title = {Design and {{RF}} Measurements of a 5 {{GHz}} 500 {{kW}} Window for the {{ITER LHCD}} System: {{AIP Conference Proceedings}}: {{Vol}} 1580, {{No}} 1},
+  file = {C\:\\Users\\JH218595\\Zotero\\storage\\92DS58R3\\1.html},
+  howpublished = {https://aip.scitation.org/doi/abs/10.1063/1.4864591}
 }
 
 
